# scriptable

./: README.md  usage
my-api-project/: config.yaml
my-api-project/reports/: 2026-04-04_23-40_httpbin.json  2026-04-04_23-41_httpbin.json  2026-04-04_23-49_httpbin.json  2026-04-04_23-56_httpbin.json
my-api-project/templates/: auth_check.py
scripable-codelib/: pyproject.toml
scripable-codelib/scriptable/: base.py  base_workflow.py  cli.py  executor.py  loader.py  result.py  runner.py  scaffold.py
scripable-codelib/scriptable.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
scripable-codelib/scriptable/docs/: caido_importer.py  models.py  openapi_importer.py
scripable-codelib/scriptable/templates/: allowed_content_type.py  api_versions.py  auth_check.py
scripable-codelib/scriptable/workflows/: cors_bypass.py  fuzz_param.py
testing-auto-init/: .env.example  README.md  config.yaml
testing-auto-init/docs/: scriptable.docs.json
testing-auto-init/templates/: example_check.py
testing-auto-init/workflows/: example_workflow.py
